fix dark mode 28/05

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -61,7 +61,25 @@ body {
   }
 }
 
+.dark-mode-sidebar{
+  background-color: black;
+  color: white;
+}
 
+.dark-mode-topbar{
+  background-color: rgb(42, 42, 42);
+  color: white;
+}
+
+.light-mode-sidebar{
+  background-color: rgb(152, 152, 152);
+  color: rgb(0, 0, 0) !important;
+}
+
+.light-mode-topbar{
+  background-color: rgb(170, 170, 170);
+  color: rgb(0, 0, 0);
+}
 
 
 
